# innovation

./: .gitignore  README.md  card_model.pytemplate  cards.py  constants.py  models.py  requirements.txt  test_models.py  utils.py
.devcontainer/: devcontainer.json
cards/: age1.yaml  age2.yaml  age3.yaml  age4.yaml  age5.yaml  age6.yaml  age7.yaml  age8.yaml
core/: pyproject.toml
core/innovation_core/: __init__.py  card_model.py.j2  cards.py  constants.py  models.py  synthesize.py
core/innovation_core/card_data/: age1.yaml  age10.yaml  age9.yaml
tests/test_core/: test_models.py
